# infra

./: README.md
ansible/: README.md  ansible.cfg  hosts.yaml  hosts.yml  playbook.yaml  pyproject.toml
ansible/.github/workflows/: ansible-lint.yml
ansible/group_vars/: all.yml
ansible/group_vars/all/: vars.yml  vault.yml
ansible/host_vars/: node0.hpcs.cs.tsukuba.ac.jp.yml  node0.lab.hpcs.cs.tsukuba.ac.jp.yml  node1.lab.hpcs.cs.tsukuba.ac.jp.yml
ansible/playbooks/: all.yml  basic.yml  dns.yml
ansible/roles/authoritative_dns/files/: Corefile  coredns.service  resolv.conf
ansible/roles/authoritative_dns/handlers/: main.yml
ansible/roles/authoritative_dns/tasks/: coredns.service  main.yml
ansible/roles/authoritative_dns/templates/: coredns.service
ansible/roles/bastion/handlers/: main.yml
ansible/roles/bastion/tasks/: main.yml
ansible/roles/bastion/templates/: bastion.service
ansible/roles/bastion/vars/: main.yml
ansible/roles/certbot/handlers/: main.yml
ansible/roles/certbot/tasks/: main.yml
ansible/roles/docker/tasks/: main.yml
ansible/roles/firewall/handlers/: main.yml
ansible/roles/firewall/tasks/: main.yml
ansible/roles/firewall/templates/: sshd.conf.j2
ansible/roles/firewall/vars/: main.yml
ansible/roles/ip/files/: resolved.conf
ansible/roles/ip/handlers/: main.yaml
ansible/roles/ip/tasks/: main.yaml
ansible/roles/ip/templates/: 10-internal.link  10-internal.network
ansible/roles/kanidm/files/: config  restart-kanidm.sh  server.toml
ansible/roles/kanidm/handlers/: main.yml
ansible/roles/sshd/: sshd_config
(+111 files in other folders)
